compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__externals__erlang_only_function_used_by_javascript_module.snap
---
source: compiler-core/src/type_/tests/externals.rs
expression: "@external(erlang, \"one\", \"two\")\nfn erlang_only() -> Int\n\npub fn main() {\n  erlang_only()\n}\n"
---
error: Unsupported target
  ┌─ /src/one/two.gleam:4:1
  │
4 │ pub fn main() {
  │ ^^^^^^^^^^^^^

The `main` function is public but doesn't have an implementation for
the JavaScript target. All public functions of a package must be able to
compile for a module to be valid.

error: Unsupported target
  ┌─ /src/one/two.gleam:5:3
  │
5 │   erlang_only()
  │   ^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the JavaScript target.

Hint: Did you mean to build for a different target?
