compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__externals__javascript_only_constant.snap
---
source: compiler-core/src/type_/tests/externals.rs
expression: "import module\npub fn main() {\n  module.javascript_only_constant()\n}"
---
error: Unsupported target
  ┌─ /src/one/two.gleam:2:1
  │
2 │ pub fn main() {
  │ ^^^^^^^^^^^^^

The `main` function is public but doesn't have an implementation for the
Erlang target. All public functions of a package must be able to compile
for a module to be valid.

error: Unsupported target
  ┌─ /src/one/two.gleam:3:9
  │
3 │   module.javascript_only_constant()
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the Erlang target.

Hint: Did you mean to build for a different target?
