compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__externals__javascript_targeted_function_cant_contain_erlang_only_function.snap
---
source: compiler-core/src/type_/tests/externals.rs
expression: "@target(javascript)\npub fn javascript_only() -> Int {\n  erlang_only()\n}\n\n@external(erlang, \"one\", \"two\")\nfn erlang_only() -> Int\n    "
---
error: Unsupported target
  ┌─ /src/one/two.gleam:2:1
  │
2 │ pub fn javascript_only() -> Int {
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

The `javascript_only` function is public but doesn't have an implementation
for the JavaScript target. All public functions of a package must be able
to compile for a module to be valid.

error: Unsupported target
  ┌─ /src/one/two.gleam:3:3
  │
3 │   erlang_only()
  │   ^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the JavaScript target.

Hint: Did you mean to build for a different target?
